examples/test/testpolicy18836.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18836
  namespace: namespace117
spec:
  podSelector:
    matchLabels:
      key38: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value11
      podSelector:
        matchLabels:
          key46: value40
          key37: value24
          key8: value31
